@@ -122,6 +122,7 @@ Luke Schierer
 Evan Schoenberg
 Torrey Searle
 Don Seiler
+Leonardo Serra
 Jim Seymour
 Joe Shaw
 John Silvestri
