@@ -1,6 +1,9 @@
 Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 
 version 0.80cvs:
+	New Features:
+	* Support for the Epiphany web browser (Leonardo Serra)
+
 	Bug Fixes:
 	* The firefox browser option now works with firefox 0.9
 
